--- a/SportsfireInjury/res/values/strings.xml
+++ b/SportsfireInjury/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">SportsFireInjury</string>
+    <string name="app_name">SportsFireApp</string>
     <string name="hello_world">Hello world!</string>
     <string name="menu_settings">Settings</string>
     <string name="title_activity_main_page">MainPage</string>
@@ -110,14 +110,10 @@
         <item>N</item>
         <item>G</item>
     </string-array>
-    <string-array name="orchardSecond3">
-        <item>Mercury</item>
-        <item>Venus</item>
-        <item>Earth</item>
-        <item>Mars</item>
-        <item>Jupiter</item>
-        <item>Saturn</item>
-        <item>Uranus</item>
-        <item>Neptune</item>
+    <string-array name="TestChoices">
+     	<item>Show previous and average</item>
+     	<item>Show previous</item>
+     	<item>Show Average</item>
+      	<item>Show Input only</item>
     </string-array>
 </resources>
