Bug fixes: Version in use
Wrong Column issue: FIXED
I also made a few changes to improve the speed of opening that page.
Before it loaded all the rows before it opened now it will open and
load in the rows bit by bit. Should feel more responsive.

Delete Data update Average: Sort of FIXED
I fixed this by setting it to 0.00 if you click on a field. However
this means if you accidentally select a field you will end up inputing.
Will try to think of a better fix.

Spelling errors: FIXED

--- a/SportsFireScreening/res/values/strings.xml
+++ b/SportsFireScreening/res/values/strings.xml
@@ -84,7 +84,7 @@
         <item>Other</item>
     </string-array>
     <string-array name="orchardSecond">
-    	<item>Select detail</item>
+        <item>Select detail</item>
         <item>Fracture</item>
         <item>Concussion with or without loss of consciousness</item>
         <item>Other bone injury</item>
@@ -100,7 +100,7 @@
         <item>Dental Injury</item>
     </string-array>
     <string-array name="orchardSecondCodes">
-     	<item></item>
+        <item></item>
         <item>F</item>
         <item>N</item>
         <item>Q</item>
@@ -118,22 +118,18 @@
     <string-array name="TestChoices">
         <item>Show previous and average</item>
         <item>Show previous</item>
-        <item>Show Average</item>
-        <item>Show Input only</item>
+        <item>Show average</item>
+        <item>Show input only</item>
     </string-array>
-    
     <string-array name="TestChoices2">
-        
         <item>Show previous</item>
-        
-        <item>Show Input only</item>
+        <item>Show input only</item>
     </string-array>
-    
-    
-	<string-array name="ComparisonChoices">
+    <string-array name="ComparisonChoices">
         <item>Show Values</item>
         <item>Show Comparison</item>
     </string-array>
+
     <string name="title_activity_test_input_form">Test Input Form</string>
 
 </resources>
